DevTools: Report column number for FunctionCall trace events.

This is needed to properly map pretty-printed source.

BUG=777159

Change-Id: I3b78e70d96a26461369f9543ac5cb03e24e2ca1f