third_party/WebKit/Source/core/inspector/InspectorTraceEvents.cpp
@@ -1060,6 +1060,7 @@ std::unique_ptr<TracedValue> InspectorFunctionCallEvent::Data(
   value->SetString("scriptId", String::Number(location->ScriptId()));
   value->SetString("url", location->Url());
   value->SetInteger("lineNumber", location->LineNumber());
+  value->SetInteger("columnNumber", location->ColumnNumber());
   return value;
 }
 
